--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,8 @@
 <body>
     <div class="container">
         <header>
-            <div class="header-inner">
-                <button id="burger-btn" class="burger-btn" aria-label="Открыть меню" aria-expanded="false">☰</button>
-                <div class="title-wrap">
-                    <h1>Адал Азамат</h1>
-                    <p></p>
-                </div>
-            </div>
+            <h1>Адал Азамат</h1>
+            <button class="burger-btn" id="burger-btn">☰</button>
         </header>
 
         <main id="game-container">
@@ -35,6 +30,8 @@
             </div>
         </main>
 
+        <div class="overlay" id="overlay"></div>
+
         <aside id="profile-panel" class="profile-panel hidden">
             <h2>Профиль</h2>
             
@@ -52,27 +49,6 @@
                 </div>
             </div>
         </aside>
-
-        <!-- Выезжающее мобильное меню -->
-        <div id="mobile-drawer" class="mobile-drawer" aria-hidden="true">
-            <div class="drawer-content">
-                <div class="drawer-header">
-                    <span>Профиль</span>
-                    <button id="drawer-close" class="drawer-close" aria-label="Закрыть">×</button>
-                </div>
-                <div class="drawer-scroll">
-                    <div class="stats-group">
-                        <h3>Ценности</h3>
-                        <div id="values-list-mobile"></div>
-                    </div>
-                    <div class="stats-group">
-                        <h3>Проблемы</h3>
-                        <div id="problems-list-mobile"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="drawer-backdrop" id="drawer-backdrop"></div>
-        </div>
     </div>
 
     <script src="script.js"></script>
